--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
     <!-- This is where you would add any app specific styling -->
     <link rel="stylesheet" href="css/override.css" type="text/css"/>
+    <link rel="stylesheet" href="js/css/arbiterStyle.css" type="text/css"/>
 
   </head>
   <body class="oj-web-applayout-body">
