--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
   ***************************** IMPORTANT INFORMATION ************************************ -->
 <html lang="en-us">
   <head>
-    <title>Oracle JET Starter Template - Web Nav Drawer</title>
+    <title>Bitcoin Arbiter</title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="css/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="css/images/favicon.png" type="image/x-icon" />
 
     <!-- This is the main css file for the default Alta theme -->
     <!-- injector:theme -->
@@ -86,9 +86,9 @@
                 chroming: 'half', display: 'icons', icons: {start: 'oj-web-applayout-offcanvas-icon'}}">
               </button>
             </div>
-            <div data-bind="css: smScreen() ? 'oj-flex-bar-center-absolute' : 'oj-flex-bar-middle oj-sm-align-items-baseline'">
-              <span role="img" class="oj-sm-only-hide oj-icon demo-oracle-icon" title="Oracle Logo" alt="Oracle Logo"></span>
-              <h1 class="oj-web-applayout-header-title" title="Application Name" data-bind="text: appName"></h1>
+            <div data-bind="css: smScreen() ? 'oj-flex-bar-center-absolute' : 'oj-flex-bar-middle oj-sm-align-items-center'">
+              <img alt="logo" id="logo" style="height:48px;width:48px"data-bind="attr: { src: 'js/css/btc_512.png'}" >             
+              <h1  title="Application Name" data-bind="text: appName"></h1>
             </div>            
           </div>
           <div role="navigation" class="oj-web-applayout-max-width oj-web-applayout-navbar">
